# strudel-kit

./: .all-contributorsrc  .env.local  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WORKING-GROUP.md  app.yaml  asset-manifest.json  customizing.md  index.html  package-lock.json  package.json  strudel.config.ts  tsr.config.json  vite.config.ts
.codesandbox/: tasks.json
.github/ISSUE_TEMPLATE/: -code--bug-report.md  -code--feature-request.md  -code--new-task-flow--component.md  -design--new-task-flow--variation--component.md  -design--new-task-flow--variation.md  -docs--documentation-content-improvement.md  -docs--documentation-website-improvement.md  -example--gui--cli-pattern-example.md  -example--pattern-example.md  design-for-task-flow.md  live_example.md  new-task-flow--variation--component.md  new-task-flow.md
.github/workflows/: deploy.yml  main.yml  pages.yml  publish  storybook.yaml
cypress/e2e/: home.cy.ts
demo/: index.html
demo/assets/: ArrowBack-BNpZQxY3.js  ArrowBack-BSDhUZuZ.js  ArrowBack-BbGrMovk.js  ArrowBack-CPRcxD_L.js  ArrowBack-CTyRJaYM.js  ArrowBack-DTvb_SRL.js  ArrowBack-Dnvqp5iA.js  ArrowBack-WFqM4mO-.js  Close-BBA0rRCf.js  Close-BDLjbwBl.js  Close-Bxu6GnAL.js  Close-CboXMYl2.js  Close-D32rx5Jk.js  Close-DEEioiKD.js  Close-DhuxY8Ul.js  Close-Ev-4-RKY.js  ContextProvider-BDdjAblC.js  ContextProvider-BH2CdinK.js  ContextProvider-BMJt3xoZ.js  ContextProvider-BVub2qH1.js  (+349 more)
docs/: 404.html  DS-GettingStarted.md  README.md  components.json  customizing.md  docusaurus.config.ts  iframe.html  index.html  index.json  opensearch.xml  output.json  package-lock.json  package.json  project.json  sidebars.ts  sitemap.xml
scripts/: app.yaml  strudel.js  update_templates.py
src/: App.tsx  routeTree.gen.ts
src/app/: App.tsx
storybook/: iframe.html  index.html  index.json  project.json
strudel-cli/: CONFIGS.md  README.md  main.py  pyproject.toml  requirements.txt  utils.py
strudel-cli/src/strudel/: __init__.py  callbacks.py  main.py  utils.py
strudel-cli/src/strudel_cli/: __init__.py  utils.py
strudel-cli/tests/: test_main.py
strudel-components/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
strudel-demo-app/: index.html  package-lock.json  package.json
strudel-taskflows/: .eslintrc  .eslintrc.cjs  .lintstagedrc  .prettierrc  COPYRIGHT.md  README.md  cypress.config.ts  index.html  package-lock.json  package.json  strudel.config.ts  tsconfig.json  vite.config.ts
templates/compare-data/backend/: pyproject.toml
templates/compare-data/backend/app/: crud.py  models.py
templates/compare-data/backend/app/migrations/: env.py
templates/compare-data/backend/app/migrations/versions/: 42761164cef1_initialize_models.py
(+1999 files in other folders)
