[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strudel-cli"
version = "0.0.3"
authors = [
  { name="Cody O'Donnell", email="ctodonnell@lbl.gov" },
  { name="Dan Gunter", email="dkgunter@lbl.gov" },
]
description = "A command-line tool for bootstrapping web applications based on the STRUDEL Design System"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
  "cookiecutter==2.5.0",
  "rich==13.3.5",
  "typer==0.9.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: User Interfaces"
]

[project.scripts]
strudel = "strudel.main:app"

[project.urls]
Homepage = "https://github.com/strudel-science/strudel-kit"
Issues = "https://github.com/strudel-science/strudel-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/strudel"]